[package]
name = "malloc_size_of"
version = "0.0.1"
authors = ["The Servo Project Developers"]
license = "MIT/Apache-2.0"
publish = false
description = "This is a copy from Servo with some non-used data structures removed and some added."

[lib]
path = "lib.rs"

[dependencies]
app_units = "0.6"
cssparser = "0.24.0"
euclid = "0.18"
hyper = { version = "0.10", optional = true }
hyper_serde = { version = "0.8", optional = true }
mozjs = { version = "0.7.1", features = ["promises"], optional = true }
serde = { version = "1.0.27", optional = true }
serde_bytes = { version = "0.10", optional = true }
servo_arc = "0.1"
smallbitvec = "2.1.0"
smallvec = "0.6"
string_cache = { version = "0.7", optional = true }
time = { version = "0.1.17", optional = true }
url = { version = "1.2", optional = true }
webrender_api = { git = "https://github.com/servo/webrender", features = ["ipc"], optional = true }
xml5ever = { version = "0.12", optional = true }
void = "1.0.2"
